feat(quota): add quotas limit fetch endpoint.
